[gd_scene load_steps=7 format=3 uid="uid://cwy63gyq3h5py"]

[ext_resource type="Script" uid="uid://p6l01ic16thu" path="res://minigames/ordenar/main.gd" id="1_3qnro"]
[ext_resource type="Texture2D" uid="uid://bl4ey4ircw10w" path="res://Sprites/tabla-cortar.png" id="1_7mxq6"]
[ext_resource type="Texture2D" uid="uid://dpqmjkyvj6xjk" path="res://Sprites/plato.png" id="2_3qnro"]
[ext_resource type="Texture2D" uid="uid://cds0v2b8gty3e" path="res://Sprites/canasta.png" id="4_jj0o1"]

[sub_resource type="LabelSettings" id="LabelSettings_7mxq6"]
font_size = 100
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jj0o1"]
font_size = 200
font_color = Color(0, 0, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_3qnro")

[node name="BG" type="Node2D" parent="."]

[node name="mesa" type="Sprite2D" parent="BG"]
position = Vector2(960, 540)
rotation = 1.5708
scale = Vector2(5, 5)
texture = ExtResource("1_7mxq6")

[node name="plato" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="plato"]
position = Vector2(600, 540)
scale = Vector2(1.7, 1.7)
texture = ExtResource("2_3qnro")

[node name="plato_final" type="Sprite2D" parent="plato"]
position = Vector2(600, 540)
scale = Vector2(1.7, 1.7)
texture = ExtResource("2_3qnro")

[node name="ingredientes" type="Node2D" parent="."]
position = Vector2(1165, 352)

[node name="Sprite2D" type="Sprite2D" parent="ingredientes"]
position = Vector2(245, 177)
scale = Vector2(1.4, 1.4)
texture = ExtResource("4_jj0o1")

[node name="MinigameTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="TimeLeftLabel" type="Label" parent="."]
offset_left = 1677.0
offset_top = 112.0
offset_right = 1793.0
offset_bottom = 389.0
text = "
"
label_settings = SubResource("LabelSettings_7mxq6")

[node name="CountdownLabel" type="Label" parent="."]
offset_left = 1352.0
offset_top = 403.0
offset_right = 1714.0
offset_bottom = 794.0
label_settings = SubResource("LabelSettings_jj0o1")

[connection signal="timeout" from="MinigameTimer" to="." method="_on_minigame_timer_timeout"]
